powernap (1.13) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 11 Jan 2011 12:59:47 -0600

powernap (1.12-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * Revert Adam changes to some files (rev148 - Original PowerNap behavior)
    - powernapd, powernapd.8, action, config.
  * Re-organize the source and update the packaging:
    - sbin: Moved powernap, powernapd, powernapd-now.
    - bin: Moved powerwake, powernap_calculator.
    - man: Moved manpages here.
    - debian/{powernap,powerwake}.install: Update accordingly.
    - debian/{powernap,powerwake}.manpages: Update accordingly.
    - powernap/monitors: Moved Adam's Monitors.
  * Add new powersave method, using pm-powersave:
    - actions/: Add a set of scripts to reduce power consumption
    - powernap-action: Add tool to enable/disable and list powersave actions.
    - debian/powernap.install: Install new files.
  * Provide ability to select a PowerNap method to perform.
    - config: Add config variable to select method.
    - powernap/{powernap,powernapd}: Make necessary changes.
  * Add WoL monitor to 'wake up' for when 'pm-powersave' action is taken.
    - sbin/powernapd: Add WoL Monitor.
    - sbin/powerna: Take pm-powersave action correctly.
  * Add class to handle config:
    - powernap/powernap.py: Add class that handles config and initialization
      of different monitors

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 11 Jan 2011 12:59:13 -0600

powernap (1.11-0ubuntu1) natty; urgency=low

  [ Adam Sutton ]
  * reworked config file and config file parsing
  * modularized the monitoring to a set of logical plugins
  * added a monitor on a UDP port for staying awake

  [ Nobuto MURATA ]
  * powerwake_completion: add bash completion from $HOME/.cache/ethers,
    LP: #675445
  * debian/powernap.upstart: fix LP: #598241 cannot enable Wake-on-LAN
    when ifconfig output is translated

  [ Dustin Kirkland ]