@@ -1,8 +1,9 @@
 powernap (1.13) unreleased; urgency=low
 
-  * UNRELEASED
+  * powernap/monitors: Re-work Monitors to integrate them with PowerNap.
+  * powernap/powernap.py: Minor fixes to not crash when loading monitors.
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 11 Jan 2011 12:59:47 -0600
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 18 Jan 2011 09:43:48 -0500
 
 powernap (1.12-0ubuntu1) natty; urgency=low
 
